[project]
name = "esphome-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioesphomeapi>=41.7.0",
    "nabu-agent",
    "piper-tts>=1.3.0",
    "zeroconf>=0.147.2",
]

[tool.uv.sources]
nabu-agent = { git = "https://github.com/und1n3/nabu-agent", rev = "whisper-test" }
