[project]
name = "nabu-server"
version = "0.1.0"
description = "Server for ha voice"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "aioesphomeapi>=41.7.0",
    "nabu-agent",
    "piper-tts>=1.3.0",
    "pymicro-vad>=1.0.2",
    "zeroconf>=0.147.2",
]

[tool.uv.sources]
nabu-agent = { git = "https://github.com/und1n3/nabu-agent", rev = "0.3.1" }
